--- a/seo.html
+++ b/seo.html
@@ -627,7 +627,7 @@
                             </div>
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
-                                   
+
                                     <div class="col-xl-12 col-lg-12 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
                                             <div class="service__details__planning__heading">
@@ -644,65 +644,110 @@
                                                     competition, and relevance, you know that your content targets the
                                                     keywords that are valuable for your business.</p>
                                             </div>
+
+                                            <div class="service__details__heading" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <h3>On-Page Optimization</h3>
+                                            </div>
+                                            <div class="service__details__text" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <p>We make an adjustment on your website to ensure that your site is
+                                                    more search engine
+                                                    friendly which is achieved through SEO of key meta tags, headers,
+                                                    URL structures,
+                                                    associated images, and even the ability for the site to be accessed
+                                                    by a smartphone
+                                                    and the time it takes for the page to fully load. As for our website
+                                                    SEO analysis no
+                                                    page or component of your site will ever fail to follow best
+                                                    practices for optimized
+                                                    rankings.</p>
+
+                                            </div>
+                                            <div class="service__details__heading" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <h3>Writing and SErating</h3>
+                                            </div>
+                                            <div class="service__details__text" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <p>The main and foundational aspect of SEO is the creation of
+                                                    high-quality and relevant
+                                                    content. These SEO copywriting services come up with the right
+                                                    content that builds
+                                                    the best strategies to build blogs, landing pages, and articles.
+                                                    This way
+                                                    incorporating the keywords we are able to avoid keyword stuffing and
+                                                    still enhance
+                                                    the usability and search engine authority of a website.</p>
+
+                                            </div>
+                                            <div class="service__details__heading" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <h3>Technical SEO</h3>
+                                            </div>
+                                            <div class="service__details__text" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <p>Website technology is paramount when it comes to the optimization
+                                                    process. Our
+                                                    semantic technical SEO services involve fixing crawl errors,
+                                                    performing site
+                                                    architecture enhancement, structured data, and site speed. We carry
+                                                    out advanced SEO
+                                                    competitor analysis to compare the performance of your site to
+                                                    competitors for
+                                                    assessment of opportunities for enhancement.</p>
+
+                                            </div>
+                                            <div class="service__details__heading" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <h3>Link Building</h3>
+                                            </div>
+                                            <div class="service__details__text" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <p>Effective link building is one of the key drivers of increasing the
+                                                    site's rank and
+                                                    improving its performance. We use white hat SEO link-building
+                                                    techniques which
+                                                    involve linking from reputable sites and adding high value to your
+                                                    domain while
+                                                    obeying SE rules.</p>
+
+                                            </div>
+                                            <div class="service__details__heading" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <h3> Local SEO</h3>
+                                            </div>
+                                            <div class="service__details__text" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <p>For businesses interested in local markets, our Local SEO services
+                                                    have your business
+                                                    indexed to appear in local search results and Google My Business.
+                                                    This way, your
+                                                    brand continues to be noticed by the customers who are around to
+                                                    patronize your
+                                                    services immediately.</p>
+
+                                            </div>
+                                            <div class="service__details__heading" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <h3>Analytics and Reporting</h3>
+                                            </div>
+                                            <div class="service__details__text" data-aos="fade-up"
+                                                data-aos-duration="1500">
+                                                <p>We offer status reports on a frequent and consistent basis to help
+                                                    you to monitor your website performance. Using exposures such as
+                                                    organic traffic, keyword position, and user activities, we regularly
+                                                    adjust the strategies to provide sustainable results and tangible
+                                                    Return on Investment.</p>
+
+                                            </div>
+                                           
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>On-Page Optimization</h4>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>We make an adjustment on your website to ensure that your site is more search engine
-                                    friendly which is achieved through SEO of key meta tags, headers, URL structures,
-                                    associated images, and even the ability for the site to be accessed by a smartphone
-                                    and the time it takes for the page to fully load. As for our website SEO analysis no
-                                    page or component of your site will ever fail to follow best practices for optimized
-                                    rankings.</p>
 
-                            </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Writing and SErating</h4>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>The main and foundational aspect of SEO is the creation of high-quality and relevant
-                                    content. These SEO copywriting services come up with the right content that builds
-                                    the best strategies to build blogs, landing pages, and articles. This way
-                                    incorporating the keywords we are able to avoid keyword stuffing and still enhance
-                                    the usability and search engine authority of a website.</p>
-
-                            </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Technical SEO</h4>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Website technology is paramount when it comes to the optimization process. Our
-                                    semantic technical SEO services involve fixing crawl errors, performing site
-                                    architecture enhancement, structured data, and site speed. We carry out advanced SEO
-                                    competitor analysis to compare the performance of your site to competitors for
-                                    assessment of opportunities for enhancement.</p>
-
-                            </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Link Building</h4>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Effective link building is one of the key drivers of increasing the site's rank and
-                                    improving its performance. We use white hat SEO link-building techniques which
-                                    involve linking from reputable sites and adding high value to your domain while
-                                    obeying SE rules.</p>
-
-                            </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4> Local SEO</h4>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>For businesses interested in local markets, our Local SEO services have your business
-                                    indexed to appear in local search results and Google My Business. This way, your
-                                    brand continues to be noticed by the customers who are around to patronize your
-                                    services immediately.</p>
-
-                            </div>
 
                         </div>
                     </div>
@@ -822,20 +867,29 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
+                        <div class="service__details__heading" data-aos="fade-up"
+                        data-aos-duration="1500">
+                        <h2>Partner with Digital Minds On</h2>
+                    </div>
+                    <div class="service__details__text" data-aos="fade-up"
+                        data-aos-duration="1500">
+                        <p>Unlike other companies that merely aim at ensuring you get certain
+                            ranks, we at Digital Minds On ensure that your company realizes
+                            long-term digital growth. Consumers approach SEO services
+                            strategically evaluating the possibility of success in an unendingly
+                            changing world, we guide you.</p>
+
+                    </div>
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Conclusion</h2>
+                        </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Duis ultricies lacus sed turpis
-                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                sagittis aliquam.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                pulvinar.</p>
+                            <p>SEO is not just a form of online advertising, it is your brand's secret to success. When
+                                you choose Digital Minds On, don’t expect to pay for an SEO consultant, rather, you gain
+                                a team of SEO experts who are dedicated to ensuring you build a long-lasting business.
+                                If you require a website SEO audit, a more complex set of SEO techniques, or particular
+                                local SEO solutions, we possess the knowledge that will make your business flourish.</p>
+
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                             <a class="default__button" href="#">GET A FREE QUOTE</a>
